@@ -1,4 +1,7 @@
 New Windows Games:
+* Command & Conquer: Generals
+6/15/2011
+New Windows Games:
 * Alan Wake - GoG only
 * Alan Wake American Nightmare - GoG only
 * Blackwell Deception
